--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-50/50 text-black antialiased;
+  @apply bg-white text-black antialiased;
   font-family: 'Inter', system-ui, sans-serif;
 }
