--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
+
+/* Canela (Commercial Type): place your licensed .woff2 in public/fonts/ */
+@font-face {
+  font-family: 'Canela';
+  src: url('/fonts/Canela-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
 @tailwind base;
 @tailwind components;
